turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:17: error: not found: value T
var T(0)=(1,2,0,1,2,1)
    ^Turmite:18: error: not found: value T
var T(1)=(0,1,0,0,1,1)
    ^Turmite:19: error: not found: value U
var U(0)=(1,0);(2,1);(0,0)
    ^Turmite:20: error: not found: value U
var U(1)=(1,0);(2,1);(1,1)
    ^Turmite:57: error: not found: value c
    if(c == colors(i)){x=i}
       ^Turmite:57: error: not found: value colors
    if(c == colors(i)){x=i}
            ^Turmite:57: error: not found: value x
    if(c == colors(i)){x=i}
                       ^Turmite:59: error: not found: value colors
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                   ^Turmite:59: error: not found: value x
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                       ^Turmite:59: error: not found: value colors
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                              ^Turmite:62: error: not found: value x
state = rule(state)(x)(2) 
                    ^